Fixed Contrast Error

--- a/weather/weather.css
+++ b/weather/weather.css
@@ -46,6 +46,10 @@ img{
     grid-row:1/3;
 }
 
+.gpsLocation{
+    color:#000;
+}
+
 /* temporary div colors*/
 div{
     background-color: #000;
